fix the alignment issue of table of measurement of insulation resistance page

--- a/src/css/measurement-of-insulation-resistance.css
+++ b/src/css/measurement-of-insulation-resistance.css
@@ -74,7 +74,6 @@
 
 @media (max-width: 768px) {
     .moir-report-table {
-        display: block;
         overflow-x: auto;
         white-space: nowrap;
     }
